Change Image urls to be visible From GitHub; Minor hamburger style correction

--- a/src/components/hamburger/hamburger.scss
+++ b/src/components/hamburger/hamburger.scss
@@ -66,14 +66,14 @@
     }
 
     .hamburger__line4 {
-      left: 8.5px;
+      left: 8.8px;
       top: 7px;
       width: 19px;
       transition: .2s .5s ease-out;
     }
 
     .hamburger__line5 {
-      right: 8.5px;
+      right: 8.8px;
       top: 7px;
       width: 19px;
       transition: .2s .7s ease-out;
